--- a/web/index.html
+++ b/web/index.html
@@ -4,12 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FormValidator</title>
+
+  <style>
+    .container {
+      width: 100vw;
+      display: grid;
+      height: 100svh;
+      place-items: center;
+    }
+  </style>
 </head>
 <body>
-  <form id="form">
-    <input type="checkbox" name="terms" id="">
-    <button>Submit</button>
-  </form>
+  <div class="container">
+    <form id="form">
+      <h1>Make sure you are 18+.</h1>
+      <input type="number" name="age">
+      <input type="checkbox" name="terms">
+    </form>
+  </div>
   <script src="./dist/bundle.js"></script>
 </body>
 </html>
